--- a/gameshop/gameshop/src/main/resources/static/css/style.css
+++ b/gameshop/gameshop/src/main/resources/static/css/style.css
@@ -142,7 +142,7 @@
     cursor: pointer;
 }
 
-.loginBtn:hover{
+.loginBtn:hover,.logoutBtn:hover,.purchaseBtn:hover{
     background-color: lightblue;
     color: dodgerblue;
 }
@@ -160,6 +160,20 @@
     margin-top: 30px;
 }
 
+.purchaseBtn {
+    width: 100px;
+    height: 40px;
+    background-color: dodgerblue;
+    color: white;
+    font-weight: 700;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 30px;
+
+}
+
 .user-box {
     width: 450px;
     margin-left: 30px;
@@ -168,6 +182,26 @@
     box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.2);
     font-size: 1.5rem;
     border-radius: 5px;
+}
+
+.low-box {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 8fr 2fr;
+    align-items: center;
+
+}
+
+.cartBtn {
+    width: 100px;
+    height: 40px;
+    background-color: dodgerblue;
+    color: white;
+    font-weight: 700;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .signup-box {
@@ -189,6 +223,10 @@
 .hidden {
     display: none;
 }
+
+
+
+
 
 
 
