--- a/gameshop/gameshop/src/main/resources/templates/cart.html
+++ b/gameshop/gameshop/src/main/resources/templates/cart.html
@@ -27,7 +27,22 @@ https://cdn.jsdelivr.net/npm/axios@1.7.2/dist/axios.min.js
         <div><a href="cart.html">CART</a></div>
       </div>
       <div class="cart">
+        <table class="cart-table">
+          <thead>
+          <td>
+            <th>게임</th>
+            <th>타이틀</th>
+            <th>장르</th>
+            <th>가격</th>
+            <th>??</th>
+          </td>
+          </thead>
+          <tbody class="cart-body">
+
+          </tbody>
+        </table>
         <div class="purchaseBtn">구매하기</div>
+        <div class="totalPrice">합계</div>
       </div>
       <div class="footer">
         <h3>FOOTER</h3>
