--- a/gameshop/gameshop/src/main/resources/static/css/style.css
+++ b/gameshop/gameshop/src/main/resources/static/css/style.css
@@ -175,6 +175,27 @@
 
 }
 
+.deleteBtn {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    text-align: center;
+    /* line-height: 35px; */
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 40px auto;
+}
+.deleteBtn:hover{
+    background-color: #fff;
+    color: firebrick;
+}
+
+
 .user-box {
     width: 450px;
     margin-left: 30px;
@@ -247,7 +268,7 @@ thead {
     height: 50px;
 }
 
-.tr:nth-child(even) td {
+tr:nth-child(even) td {
     background-color: #eaeaed;
 }
 
