--- a/gameshop/gameshop/src/main/resources/templates/cart.html
+++ b/gameshop/gameshop/src/main/resources/templates/cart.html
@@ -29,17 +29,13 @@ https://cdn.jsdelivr.net/npm/axios@1.7.2/dist/axios.min.js
       <div class="cart">
         <table class="cart-table">
           <thead>
-          <td>
             <th>게임</th>
             <th>타이틀</th>
             <th>장르</th>
             <th>가격</th>
-            <th>??</th>
-          </td>
+            <th></th>
           </thead>
-          <tbody class="cart-body">
-
-          </tbody>
+          <tbody class="cart-body"></tbody>
         </table>
         <div class="purchaseBtn">구매하기</div>
         <div class="totalPrice">합계</div>
