--- a/gameshop/gameshop/src/main/resources/templates/cart.html
+++ b/gameshop/gameshop/src/main/resources/templates/cart.html
@@ -39,6 +39,7 @@ https://cdn.jsdelivr.net/npm/axios@1.7.2/dist/axios.min.js
         </table>
         <div class="purchaseBtn">구매하기</div>
         <div class="totalPrice">합계</div>
+        <div class="deleteAllBtn">다지워버령</div>
       </div>
       <div class="footer">
         <h3>FOOTER</h3>
